@@ -194,6 +194,14 @@ M.ListView = M.View.extend(
     selectedItem: null,
 
     /**
+     * Contains a reference to the currently visible swipe delete button (if one exists).
+     *
+     * @type M.ButtonView
+     * @private
+     */
+    swipeButton: null,
+
+    /**
      * This method renders the empty list view either as an ordered or as an unordered list. It also applies
      * some styling, if the corresponding properties where set.
      *
@@ -488,6 +496,12 @@ M.ListView = M.View.extend(
      * @param {String} listItemId The id of the list item to be set active.
      */
     setActiveListItem: function(listItemId, event, nextEvent) {
+        /* if there is a swipe button visible, do nothing but hide that button */
+        if(this.swipeButton) {
+            this.hideSwipeButton();
+            return;
+        }
+
         if(this.selectedItem) {
             this.selectedItem.removeCssClass('ui-btn-active');
         }
@@ -554,6 +568,61 @@ M.ListView = M.View.extend(
         if(nextEvent) {
             M.EventDispatcher.callHandler(nextEvent, event, NO, [id, modelId]);
         }
+    },
+
+    showSwipeButton: function(id, event, nextEvent) {
+        var listItem = M.ViewManager.getViewById(id);
+
+        /* reset the selection for better visual effect */
+        this.resetActiveListItem();
+
+        if(!listItem.swipeButton) {
+            M.Logger.log('You need to specify a valid button with the \'swipeButton\' property of your list template!', M.WARN);
+        } else {
+            var previouslistItem = this.swipeButton ? this.swipeButton.parentView : null;
+
+            if(previouslistItem) {
+                this.hideSwipeButton();
+            }
+
+            if(!previouslistItem) {
+                this.swipeButton = M.ButtonView.design(
+                    listItem.swipeButton
+                );
+                this.swipeButton.value = this.swipeButton.value ? this.swipeButton.value : 'delete';
+                this.swipeButton.parentView = M.ViewManager.getViewById(id);
+                this.swipeButton.cssClass = this.swipeButton.cssClass ? this.swipeButton.cssClass + ' tmp-swipe-button' : 'a tmp-actionsheet-destructive-button tmp-swipe-button';
+                this.swipeButton.value = this.swipeButton.value ? this.swipeButton.value : 'delete';
+                this.swipeButton.internalEvents = {
+                    tap: {
+                        target: listItem,
+                        action: 'swipeButtonClicked'
+                    }
+                };
+
+                $('#' + id).append(this.swipeButton.render());
+                this.swipeButton.theme();
+                this.swipeButton.registerEvents();
+                $('#' + this.swipeButton.id).css('height', 0.7 * $('#' + id).outerHeight());
+                $('#' + this.swipeButton.id).css('top', Math.floor(0.15 * $('#' + id).outerHeight()));
+                $('#' + id + '>div.ui-btn-inner').css('margin-right', parseInt($('#' + this.swipeButton.id).css('width')) + parseInt($('#' + this.swipeButton.id).css('right')));
+
+                /* register tap/click for the page so we can hide the button again */
+                var that = this;
+                $('#' + M.ViewManager.getCurrentPage().id).bind('click tap', function() {
+                    that.hideSwipeButton();
+                });
+            }
+        }
+    },
+
+    hideSwipeButton: function() {
+        $('#' + this.swipeButton.id).hide();
+        $('#' + this.swipeButton.id).parent('li').find('div.ui-btn-inner').css('margin-right', 0);
+        this.swipeButton = null;
+
+        /* un-register tap/click for the page */
+        $('#' + M.ViewManager.getCurrentPage().id).unbind('click tap');
     }
 
 });
